Include uart component in project, print the sent name from website to AVR

--- a/firmware/esp32/blinkmojt/Makefile
+++ b/firmware/esp32/blinkmojt/Makefile
@@ -6,6 +6,7 @@
 PROJECT_NAME := blinkmojt
 
 EXTRA_COMPONENT_DIRS = $(BLINKMOJT_PATH)/firmware/esp32/components/bm_wifi
+EXTRA_COMPONENT_DIRS += $(BLINKMOJT_PATH)/firmware/esp32/components/uart
 
 include $(IDF_PATH)/make/project.mk
 
