--- a/firmware/esp32/blinkmojt/CMakeLists.txt
+++ b/firmware/esp32/blinkmojt/CMakeLists.txt
@@ -4,7 +4,7 @@ cmake_minimum_required(VERSION 3.5)
 
 # (Not part of the boilerplate)
 # This example uses an extra component for common functions such as Wi-Fi and Ethernet connection.
-set(EXTRA_COMPONENT_DIRS $ENV{BLINKMOJT_PATH}/firmware/esp32/components/bm_wifi)
+set(EXTRA_COMPONENT_DIRS $ENV{BLINKMOJT_PATH}/firmware/esp32/components/bm_wifi $ENV{BLINKMOJT_PATH}/firmware/esp32/components/uart)
 
 include($ENV{IDF_PATH}/tools/cmake/project.cmake)
 project(blinkmojt)
